@@ -1180,6 +1180,11 @@ int do_help(void)
     int i, j, row = 0, page = 1, kbinput = 0, no_more = 0;
     int no_help_flag = 0;
 
+
+    /* Oh well, they've asked for the help menu, if the keypad is not on now
+       we're going to have to turn it on */
+    keypad_on(TRUE);
+
     blank_edit();
     curs_set(0);
     blank_statusbar();
@@ -1265,7 +1270,9 @@ int do_help(void)
 	    no_more = 1;
 	    continue;
 	}
-    } while ((kbinput = wgetch(edit)) != NANO_EXIT_KEY);
+    } while ((kbinput = wgetch(edit)) != NANO_EXIT_KEY && 
+      kbinput != NANO_EXIT_FKEY);
+
     if (no_help_flag) {
 	werase(bottomwin);
 	wrefresh(bottomwin);
